--- a/sentencing-eda.Rmd
+++ b/sentencing-eda.Rmd
@@ -459,122 +459,84 @@ ggplot(us_sent, aes(y = sentence_length, x = all_adjustments,
 
 Now we have four different variables represented in a single plot, which is a super powerful tool. What do you notice about the plots above? 
 
-<!-- #### How does the age range vary with criminal history? -->
-
-```{r ridge plot age by criminal history, fig.width = 6, fig.height = 5, eval = FALSE, include = FALSE}
-ggplot(us_sent, aes(x = age, y = criminal_history,fill = criminal_history)) +
-  geom_density_ridges(show.legend = FALSE) +
-  labs(fill = "Criminal History",
-       x = "Age of individual in years",
-       y = "Criminal History")
-```
-
-
 ### When?
 
-Let's turn to the final question we are asking about our dataset, which is encompassed in the "When?" question. Specifically, let's explore the time data found in our US sentencing data set. How many columns of data did we have again? Which tool can we use to find out? Do we remember?
-
-
-We can use the `names()` routine to remind ourselves.
-
-
-```{r check the columns, i.e. names}
-names(us_sent)
-```
-
-We can see the fifteen column names in that output. Awesome. It looks like our time data, as far as "when" these convicted individuals in our data were convicted, is in the `year` column. Let's see what we're working with here by using `distinct()` again.
+Earlier we identified `year` as our only variable capturing the *when*, and from the background information we know we have records spanning from 2006 to 2020. It is worth noticing that although $2020 - 2006 = 14$, when we count each year as a whole year of data *inclusively*, we have up to 15 distinct possible years of data available. Let's see which specific years of data we have available by using `distinct()` again.
 
 ```{r Segregate and list the data in the column year}
 us_sent %>% 
   distinct(year)
 ```
 
-Excellent. So we know we have years from 2006 to 2020 in our data, or 15 rows worth of data.  It is worth noticing that although 2020-2006 = 14, when we count each year as a whole year of data *inclusively*, we have 15 distinct instances, which the distinct command helpfully listed out for us.
+Now let's create a graph to see how the number of cases we have varies by year. We'll place each year on the vertical (`y`) axis and the sentences on the horizontal (`x`) axis.  
 
-<!-- Now, each of these data points is a numeric variable, such as '2010', or '2015'. One way we could check is to use the `sapply()` routine again.
-
-```{r}
-sapply(us_sent, is.numeric)
-```
-
-In the output we can indeed see `TRUE` for the column `year`. As we progress in our educational journey, we will learn about different numeric variables, including double precision floating point arithmetic numeric variables. Is our `year` data in this format? Let's use the same command with a different argument:
-
-
-```{r use sapply() to verify the year data is indeed numero}
-sapply(us_sent, is.double)
-```
-
-Nice, we can see that our `year` data is indeed a double precision floating point number. -->
-
-Let's do a graph of our `year` data, where we have each year on the vertical y axis and the sentences on the horizontal x axis.  
-
-```{r year data bar chart, fig.width = 6, fig.height = 5}
-ggplot(us_sent) +
-  geom_bar(aes(y = year),
-           fill = "blue") +
-  labs(title = "Observations by Year",
+```{r bar graph sentences per year, fig.width = 6, fig.height = 5}
+ggplot(us_sent, aes(y = year)) +
+  geom_bar(fill = "blue") +
+  labs(title = "Sentences per Year",
        x = "Count",
        y = "Year")
 ```
 
+Let's explore how sentence length varies by each year in our data set. We can do this by using side-by-side boxplots again. 
 
-Let's explore how `sentence_length` varies by each year in our data set. We can do this by using side-by-side boxplots again. 
-
-```{r graph our year data- scatter plot, fig.width = 6, fig.height = 5}
-ggplot(us_sent, aes(x = year, 
-                    y = sentence_length)) + 
+```{r boxplot sentences per year, fig.width = 6, fig.height = 5}
+ggplot(us_sent, aes(x = year, y = sentence_length)) + 
   geom_boxplot() +
-  labs(title = "Sentence Length by Year",
+  labs(title = "Distribution of Sentence Length by Year",
        x = "Sentence Length",
        y = "Year")
 ```
+
 <!-- could include more information on interpreting boxplots, explaining what outliers are, etc. would likely write about this above where we first introduce boxplots. We could also consider adding in information about examining center, spread, etc. -->
 
-### Where {.tabset}
+### Where? {.tabset}
 
-Now that we've explored the "who?", "what?", and "when?" questions about our data set, let's finish off our EDA by understanding the "where?" question. Let's check what districts we have in the data. We can do this using `distinct()` again.
+Now that we've explored the *who*, *what*, and *when* questions about our data, let's finish off our EDA by understanding the *where* question. Let's check what districts we have in the data. We can do this using `distinct()` again.
 
 ```{r}
 us_sent %>%
   distinct(district)
 ```
 
-You'll notice that certain states are a single district on their own. Other larger states are split into several districts (e.g. New York East, New York North).  
+You'll notice that certain states are a single district on their own, while other larger states are split into several districts (e.g. New York East, New York North).  
 
 If you live in the United States, do you know which district you live in?
 
 If not, you can look it up at [the United States Department of Justice's website](https://www.uscourts.gov/federal-court-finder/search).
 
-Apart from using the `distinct` variable to figure out what districts we have in our data set,  we are also interested in finding out how many sentences were made in each district. We also will want to think about this question in relation to the population of those districts, which can be quite nuanced and we will come back to this later.
+Apart from using the `distinct()` command to figure out what districts we have in our data set, we are interested in finding out how many sentences were made in each district. We will also want to think about this question in relation to the population of those districts, which can be quite nuanced---we will come back to this later.
 
-Our goals in this next section are to think about ways we can explore the question "Where did those sentences occur?" in a visual way.
+Our goals in this next section are to think about ways we can explore the question *"Where did those sentences occur?"* in a visual way.
 
-<!--Note from original authors: **Learning aims**
+<!--
+Note from original authors: **Learning aims**
 
 - introduce factors as a data type (accomplished above)
 - explain why it might be better to put our names on the y axis instead of the x-axis for many categories and those with longer names. This makes it more readable.
 - explain that automatically categorical data will be placed in alphabetical order.
 - we can reconfigure the graph using functions from the `forcats` package.
 - This is a good example for when you might want to order it in terms of frequency (i.e. the count) using `fct_infreq`
-- We may also want to reverse the order to see the districts which have the most sentences at the top of our plot using `fct_rev`. -->
+- We may also want to reverse the order to see the districts which have the most sentences at the top of our plot using `fct_rev`. 
+-->
 
-Let's start looking at the number of individual sentences across districts by using a bar plot. 
+Let's start looking at the number of individual sentences across districts by using a bar graph.  
 
-
-```{r, fig.width = 6, fig.height = 5}
-ggplot(us_sent) +
-  geom_bar(aes(x = district))
+```{r bar graph districts, fig.width = 6, fig.height = 5}
+ggplot(us_sent, aes(x = district)) +
+  geom_bar()
 ```
 
-We can see immediately that, given the large number of districts, a simple bar graph makes it super hard to interpret the data. Let's go through some ways we can improve this plot. 
+We can see immediately that, given the large number of districts, a simple bar graph makes it super hard to interpret the data. Let's step through some ways we can improve this plot. 
+
 
 #### 1. Place district on the $y$-axis
 
-First, we can change our plot so that `district` is on the y-axis so there is more room for the text, and let's not worry about presenting accurate axis labels or titles until we get our plot into a readable format: 
+First, we can change our plot so that `district` is on the $y$-axis so there is more room for the text. Let's not worry about presenting accurate axis labels or titles until we get our plot into a readable format: 
 
-```{r, fig.width = 5, fig.height = 9}
-ggplot(us_sent) +
-  geom_bar(aes(y = district))
+```{r horizontal bar graph districts, fig.width = 5, fig.height = 9}
+ggplot(us_sent, aes(y = district)) +
+  geom_bar()
 ```
 
 That definitely makes it easier to read the district names! However, we can think about ordering the districts in such a way that is useful for us. For example, we might be interested in seeing the districts with the most amount of sentences.
@@ -583,50 +545,32 @@ That definitely makes it easier to read the district names! However, we can thin
 
 To answer this question, we can use `fct_infreq()`, as we did earlier in our EDA, to order the districts from the least to the most number of sentences. 
 
-```{r, fig.width = 5, fig.height = 9}
-ggplot(us_sent) +
-  geom_bar(aes(y = fct_infreq(district)))
+```{r bar graph district sorted, fig.width = 5, fig.height = 9}
+ggplot(us_sent, aes(y = fct_infreq(district))) +
+  geom_bar()
 ```
 
 #### 3. Reverse the order of the districts
 
 Alternatively, we can order the districts from the most to the least amount of sentences in our data set by using `fct_rev()` in conjunction with `fct_infreq()`.
 
-```{r, fig.width = 5, fig.height = 9}
-ggplot(us_sent) +
-  geom_bar(aes(y = fct_rev(fct_infreq(district))))
+```{r bar graph district reverse sorted, fig.width = 5, fig.height = 9}
+ggplot(us_sent, aes(y = fct_rev(fct_infreq(district)))) +
+  geom_bar()
 ```
 
 #### 4. Add title and axes labels
 
-Now that we have our plot data organized in a readable and useful way, let's add useful title and axis titles. When we have longer titles, you can use $\n$ to add a line break. 
+Now that we have our plot data organized in a readable and useful way, let's add useful title and axis titles. When we have longer titles, you can use `\n` to add a line break. 
 
-```{r, fig.width = 5, fig.height = 9}
-ggplot(us_sent) +
-  geom_bar(aes(y = fct_rev(fct_infreq(district))),
-           fill = "forestgreen") +
+```{r final district bar graph, fig.width = 5, fig.height = 9}
+ggplot(us_sent, aes(y = fct_rev(fct_infreq(district)))) +
+  geom_bar(fill = "forestgreen") +
   labs(title = "Number of Individuals Sentenced at \nthe Federal District Court Level",
        y = "Federal District Court",
        x = "Number of individuals")
 ```
 
-<!--##### Making the plot more readable with subsetting -->
-
-```{r, include = FALSE, eval = FALSE}
-ggplot(us_sent) +
-  geom_bar(aes(y = fct_rev(fct_infreq(district)))) +
-  labs(title = "Number of individuals sentenced at the federal district court level for each district from x to x",
-       y = "Federal District Court",
-       x = "Number of individuals")
-```
-
-```{r, include = FALSE, eval = FALSE}
-ggplot(us_sent) +
-  geom_bar(aes(y = fct_infreq(district))) +
-  labs(title = "Number of individuals sentenced at the federal district court level for each district from x to x",
-       y = "Federal District Court",
-       x = "Number of individuals")
-```
 
 <!--##### Exploring the census data
 
