--- a/analysis.Rmd
+++ b/analysis.Rmd
@@ -15,20 +15,21 @@ Suppose we want to predict how much electricity the city of Los Angeles, Califor
 Let's make two example points, point A at (1,2) and point B at (3,5). In R, we will save these points in a data frame using a vector of the x values, 1 and 3, and a vector of the matching y values, 2 and 5.
 
 ```{r}
-twopoints <- data.frame(xvals = c(1,3), 
-                        yvals = c(2,5), 
-                        label = c('A','B'))
+twopoints <- data.frame(xvals = c(1, 3), 
+                        yvals = c(2, 5), 
+                        label = c("A","B"))
 head(twopoints)
 ```
 
 We can make a fairly simple plot of these two points, using `geom_point()` as we did in our EDA, and `geom_text()` to label our points. 
 
-```{r}
+```{r twopoints}
 twoplot <- ggplot(twopoints, aes(x = xvals, y = yvals)) + 
-  geom_point(color = 'coral2') + 
-  geom_text(aes(label = label), nudge_y = .3) +
+  geom_point(color = "coral2") + 
+  geom_text(aes(label = label), nudge_y = 0.3) +
   xlim(0, 6) + 
   ylim(0, 6)
+
 twoplot
 ```
 
@@ -40,116 +41,125 @@ $$
 y = m x + b
 $$
 
-Fitting our line to the data is straightforward, we can solve in a number of ways. One way, is that we can plug both these points into the equation of the line and then solve the system together.
+Fitting our line to the data is straightforward and can be done in a number of ways. One way is that we can plug both points into the equation of the line and then solve the system together.
 
 $$
-2 = (1)m + b 
-$$ $$5 = (3)m+b$$Here we have a system that has two equations and two unknowns, $m$ and $b$. We know this system has a unique solution! Since we can solve this system using a variety of techniques, try to solve this system using a technique you are comfortable with and verify that the solution below passes through each of the two points.
+\begin{align}
+2 &= (1)m + b\\
+5 &= (3)m + b
+\end{align}
+$$
+
+Here we have a system that has two equations and two unknowns ($m$ and $b$), so we know this system has a unique solution! We can solve this system using a variety of techniques---try to solve this system using a technique you are comfortable with and verify that the solution below passes through each of the two points.
 
 $$
-y = \frac{3}{2} x+ \frac{1}{2}
+y = \frac{3}{2} x + \frac{1}{2}
 $$
 
-We can plot the results. Here we use the `geom_abline()` function, to plot our linear equation which can be done by inputting the values for the slope and the intercept.
+Next we can plot the results. Here we use the `geom_abline()` function, to plot our linear equation which can be done by inputting the values for the slope and the intercept.
 
-```{r}
-twoplot + geom_abline(slope = 3/2, 
-                      intercept = 1/2)
+```{r twopoints lm}
+twoplot + 
+  geom_abline(slope = 3/2, 
+              intercept = 1/2)
 ```
 
 Great! Notice that the line above goes right through our two data points.
 
 ### Numerically fit a line to two points
 
-If we want to reduce the amount of calculations required to fit a line to two points, we can instead just rely on R to do the work for us. We can use the linear model function, `lm()` to carry out a regression for us. We just input our `yvals` and `xvals` along with our data `twopoints` to fit a linear model using R. 
+If we want to reduce the amount of calculations required to fit a line to two points, we can instead just rely on R to do the work for us. We can use the linear model function `lm()` to carry out a regression for us. We just input our `yvals` and `xvals` along with our data `twopoints` to fit a linear model using R. 
 
 ```{r}
-twolinear <- lm(formula = yvals ~ xvals, 
-                data = twopoints)
-twolinear
+two_lm <- lm(yvals ~ xvals, data = twopoints)
+two_lm
 ```
 
 ### Analytically fit a line to three points
 
-We know that two points alone uniquely define a line, but what do we think will happen if we have to find a line that describes the goes through three data points? Let's add the point (2,3) to our existing set and see what happens when try to draw a line through these three points. Below, we will use R to plot three graphs of our points, each attempting to find a line that goes through all three data points. Don't worry too much on the coding for now, but pay attention to the resulting plots. 
+We know that two points alone uniquely define a line, but what do we think will happen if we have to find a line that goes through three data points? Let's add the point $(2, 3)$ to our existing set and see what happens when try to draw a line through all three points. Below, we will use R to plot the three points and make multiple attempts to fit a line. Don't worry too much on the coding for now, but pay attention to the resulting plots. 
 
-```{r, fig.width=12}
-# add point C
-threepoints = rbind(twopoints, 
-                    data.frame(xvals = 2, yvals = 3, label = 'C'))
+```{r threepoints line guesses, fig.width=12}
 
-# fit possible regression lines
-threepoints$yfit1 = threepoints$xvals*3/2 + 1/2
-threepoints$yfit2 = threepoints$xvals + 1
-threepoints$yfit3 = threepoints$xvals*2 - 1
+threepoints <- 
+  twopoints %>%
+  # Add third point to dataset
+  add_row(xvals = 2, yvals = 3, label = "C") %>%
+  # Generate y values for guesses of regression lines 
+  mutate(yfit1 = xvals * 3/2 + 1/2,
+         yfit2 = xvals + 1,
+         yfit3 = xvals * 2 - 1)
 
-# plot data points with lines
-threeplot = ggplot(threepoints, aes(x = xvals, 
-                                    y = yvals)) + 
-  geom_point(color = 'coral2')  + 
+# Plot data points with lines
+threeplot <-
+  ggplot(threepoints, aes(x = xvals, y = yvals)) + 
+  geom_point(color = "coral2")  + 
   geom_text(aes(label = label), 
             nudge_y = 0.3, 
             check_overlap = TRUE) +
   xlim(0,6) + 
   ylim(0,6)
 
-# display plots
+# Display plots
 grid.arrange(
   threeplot + 
     geom_abline(slope = 3/2, intercept = 1/2) + 
     geom_segment(aes(xend = xvals, 
                      yend = yfit1), 
-                 color = 'coral2'),
+                 color = "coral2"),
   threeplot + 
     geom_abline(slope = 1, intercept = 1) + 
     geom_segment(aes(xend = xvals, 
                      yend = yfit2), 
-                 color = 'coral2'),
+                 color = "coral2"),
   threeplot + 
     geom_abline(slope = 2, intercept = -1) +  
     geom_segment(aes(xend = xvals, 
                      yend = yfit3), 
-                 color='coral2'),
-  ncol=3)
+                 color="coral2"),
+  ncol = 3)
 ```
 
-Notice in all three graphs above, we can't draw a straight line through all three points at the same time. The best that we can do is try to find a line that gets very close to all theree points, or fits these three points the best. But how can we define "the best" line that fits this data?
+Notice in all three graphs above, we can't draw a straight line through all three points at the same time. The best that we can do is try to find a line that gets very close to all three points, or fits these three points *the best*. But how can we define "the best" line that fits this data?
 
-To understand which line *best fits* our three data points, we need to talk about the **error**, which is also called the **residual** in statistics. The residual is the vertical distance between the predicted data point y (on the line) and the actual value of y our data takes on at that  point (the value we collected) at each of our data points. In our data set we have the points (1,2), (2,3), and (3,5) so the only actual values for y in our data set are 2, 3,and 5 even though our prediction line (our model) takes on all values of y between 0 and 6.
+To understand which line *best fits* our three data points, we need to talk about the **error**, which is also called the **residual** in statistics. The residual is the vertical distance between the predicted data point $\hat{y}$ (on the line) and the actual value of $y$ our data takes on at that point (the value we collected). In our data set we have the points $(1, 2)$, $(2, 3)$, and $(3, 5)$ so the only actual values for $y$ in our data set are 2, 3, and 5 even though our predicted line, or *linear model*, takes on all values of $y$ between 0 and 6.
 
 
 ### Numerically fit a line to three points
 
-To find the model that best fits our data, we want to make the error as small as possible. To expand on our definition of linear regression above, linear regression is a technique that allows us to identify the line that minimizes our error. This line is called a *linear regression model* and is the line that best fits our data. Below, you will see R code to identify the model that best fits our data.
+To find the model that best fits our data, we want to make the total error as small as possible. To expand on our definition of linear regression above, linear regression is a technique that allows us to identify the line that minimizes our error. This line is called a *linear regression model* and is the line that best fits our data. Below, we use `lm()` again to fit our linear model to the three data points.
 
 ```{r}
-threelinear = lm(formula = yvals ~ xvals, 
-                 data = threepoints)
-threelinear
+three_lm <- lm(yvals ~ xvals, data = threepoints)
+three_lm
 ```
 
 Here R gives us the slope and intercept of the straight line that best fits our data. Let's graph this line together with our data using the code below. 
 
-```{r}
-threepoints$linfit = 1.5*threepoints$xvals + 0.3333
-ggplot(threepoints, aes(x = xvals, 
-                        y = yvals)) + 
-  geom_point(color = 'coral2')  + 
+```{r three points lm}
+# Add predicted values (yhat) to data
+threepoints <-
+  threepoints %>%
+  mutate(yhat = 1.5 * xvals + 0.3333)
+
+ggplot(threepoints, aes(x = xvals, y = yvals)) + 
+  geom_point(color = "coral2")  + 
   geom_text(aes(label = label), 
             nudge_y = -0.4 ) +
-  xlim(0,6) + 
-  ylim(0,6) + 
+  xlim(0, 6) + 
+  ylim(0, 6) + 
   geom_abline(slope = 1.5, intercept = 0.3333) + 
   geom_segment(aes(xend = xvals, 
-                   yend = linfit), 
-               color = 'coral2')
+                   yend = yhat), 
+               color = "coral2")
 ```
 
 Notice that the best fit linear model doesn't go through any of our three points! **Why do you think that is?**
 
 Keep in mind, our goal is to minimize our error as much as we can. In each of the four previous graphs, the error (or the distance between the predicted y value and the actual y value) is shown on the graph, highlighted in the coral color. Of the four plots we just made of lines through our three data points, which one seems to have the smallest error?
 
-> Note: Whenever you employ linear regression, there are various conditions you must make sure are satisfied before proceeding. You can use the acronym L.I.N.E to remember that you must satisfy linearity, independence, normality, and equal variance conditions. For the purposes of this tutorial, we won't go in depth about what these conditions mean and how you can check these conditions, but make sure to keep them in mind for your future data analyses. Conditions are super important in statistical analysis!
+> Note: Whenever you employ linear regression, there are various conditions you must make sure are satisfied before proceeding. You can use the acronym L.I.N.E to remember that your residuals must satisfy **L**inearity, **I**ndependence, **N**ormality, and **E**qual variance conditions. For the purposes of this tutorial, we won't go in depth about what these conditions mean and how you can check these conditions, but make sure to keep them in mind for your future data analyses. Conditions are super important in statistical analysis!
+
 
 ## Introduction to linear regression
 
